# llm2geneset

./: .coveragerc  .gitignore  .isort.cfg  .pre-commit-config.yaml  AUTHORS.md  CONTRIBUTING.md  LICENSE  LICENSE.txt  README.md  llm2geneset.yml  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml
docs/: conf.py  index.md
notebooks/: 0_gen_libraries.ipynb  0_gene_symbols.ipynb  0_geneset_sz.ipynb  12_genes_overlap_outs.ipynb  1_genes_overlap_outs.ipynb  1_genes_overlap_plots.ipynb  1_geneset_sz.ipynb  2_GO_depth.ipynb  3_confidence.ipynb  3_gsai_vs_llm2geneset.ipynb  3_gsai_vs_ora_vs_llm2geneset.ipynb  3_human_agreement2.ipynb  3_mix_experiments.ipynb  3_mix_experiments_hint2.ipynb  3_mix_experiments_with_ora.ipynb  4_GO_depth_vs_geneset_sig.ipynb  4_create_example.ipynb  4_run_example.ipynb  4_run_example_bgd_genes.ipynb  GOdepth_sig.tsv  KEGG_AL002.tsv  README.md  Stats.TECAN.LPS_vs_untreated.txt  benchmark_env.yml  blitzgsea.ipynb  camera_GTEx.ipynb  example_genes_highAD.txt  example_genes_lowAD.txt  fig1.ipynb  fig1_jz.ipynb  fig2.ipynb  fig3.ipynb  fig4.ipynb  figures.ipynb  figures_zia.ipynb  gen_time.tsv  gene_symbols.ipynb  genes_overlap.tsv  geneset_sz.tsv  gsai_outputs.tsv  (+22 more)
notebooks/archive/: 2_GO_depth.ipynb  4_GO_depth_vs_geneset_sig.ipynb  4_create_example.ipynb  eutils.py  example_genes_highAD.txt  example_genes_lowAD.txt  figures.ipynb  figures_zia.ipynb
notebooks/archive/go_depth/: GO_Cellular_Component_2023.txt  GO_Molecular_Function_2023.txt
notebooks/data/: Counts.TECAN.AL002_vs_isotype.txt  ST1_discovery_DAA.txt  Stats.TECAN.AL002_vs_isotype.txt  Stats.scRNA_pseudobulk_microglia.PD_vs_Healthy.txt
notebooks/figures/: README.md
notebooks/libs_human/gmt/: GO_Biological_Process_2023.txt  GO_Biological_Process_2023_sample1000.txt  GO_Cellular_Component_2023.txt  GO_Molecular_Function_2023.txt  KEGG_2021_Human.txt  Reactome_2022.txt  WikiPathway_2023_Human.txt
notebooks/libs_human/gmt_llm_ensembled/: KEGG_2021_Human.txt  Reactome_2022.txt  WikiPathway_2023_Human.txt
notebooks/libs_human/gmt_tailored/: Brain_Liver_abstract.txt  Brain_Liver_highConf.txt
notebooks/libs_human/go_depth/: GO_Biological_Process_2023.txt
notebooks/libs_human/gpt-3.5-turbo-0125/: GO_Cellular_Component_2023.json  GO_Molecular_Function_2023.json  KEGG_2021_Human.json  Reactome_2022.json  WikiPathway_2023_Human.json
notebooks/libs_human/gpt-4o-2024-05-13/: GO_Cellular_Component_2023.json  GO_Molecular_Function_2023.json  KEGG_2021_Human.json  Reactome_2022.json  WikiPathway_2023_Human.json
notebooks/libs_human/json/: KEGG_2021_Human.json  Reactome_2022.json  WikiPathway_2023_Human.json
notebooks/libs_yeast/gmt/: GO_Biological_Process_2018.txt  KEGG_2019.txt
notebooks/libs_yeast/gpt-3.5-turbo-0125/: GO_Biological_Process_2018.json  KEGG_2019.json
notebooks/libs_yeast/gpt-4o-2024-05-13/: GO_Biological_Process_2018.json  KEGG_2019.json
notebooks/libs_yeast/json/: GO_Biological_Process_2018.json  KEGG_2019.json
notebooks/outputs/: KEGG_AL002.tsv  KEGG_scRNA_mgl_PD.tsv  gen_time.tsv  geneset_sz.tsv  gsai_vs_llm2geneset_outputs.tsv  gsai_vs_llm2geneset_outputs_KEGG_2021_Human.tsv  gsai_vs_llm2geneset_outputs_Reactome_2022.tsv  gsai_vs_llm2geneset_outputs_WikiPathway_2023_Human.tsv  hgnc_symbols.txt  human_agreement2.csv  mix_genesets_outputs.tsv  no_context_AL002.tsv  no_context_scRNA_mgl_PD.tsv  ora_mix_genesets_outputs.tsv  ora_outputs_KEGG_2021_Human.tsv  ora_outputs_Reactome_2022.tsv  ora_outputs_WikiPathway_2023_Human.tsv  overlap_high_vs_ensemble.tsv  prompt2_mix_genesets_output.tsv  tok_use.tsv  with_context_AL002.tsv  with_context_scRNA_mgl_PD.tsv  wrong_context_scRNA_mgl_PD.tsv
src/llm2geneset/: __init__.py  eutils.py  llm2geneset.py
src/llm2geneset/prompts/: genes.txt  genes_concise.txt  genes_concise_batch.txt  genes_concise_context.txt  genes_concise_yeast.txt  genes_single_gene.txt  genes_single_gene_format.txt  gsai_prompt.txt  gsai_prompt2.txt  pathways.txt  pathways_concise.txt  pathways_from_genes.txt  pathways_from_genes2.txt  pathways_from_genes_context.txt
tests/: conftest.py  test_skeleton.py
webapp/: app.py  requirements.txt
