[build-system]
# AVOID CHANGING REQUIRES: IT WILL BE UPDATED BY PYSCAFFOLD!
# removed depenecy on setup_scm
#requires = ["setuptools>=46.1.0", "setuptools_scm[toml]>=5"]
requires = ["setuptools>=46.1.0"]
build-backend = "setuptools.build_meta"

# [tool.setuptools_scm]
# For smarter version schemes and other configuration options,
# check out https://github.com/pypa/setuptools_scm
# version_scheme = "no-guess-dev"

[tool.pixi.project]
name = "llm2geneset"
channels = ["conda-forge", "bioconda"]
platforms = ["osx-64", "linux-64"]

[tool.pixi.pypi-dependencies]
llm2geneset = { path = ".", editable = true }
json-repair = "*"
asynciolimiter = "*"
rouge-score = "*"

[tool.pixi.tasks]

[tool.pixi.dependencies]
jupyterlab = ">=4.2.5,<5"
pandas = ">=2.2.3,<3"
tqdm = ">=4.66.5,<5"
scipy = ">=1.14.1,<2"
statsmodels = ">=0.14.4,<0.15"
aiohttp = ">=3.10.10,<4"
openai = ">=1.51.2,<2"
ipywidgets = ">=8.1.5,<9"
pyscaffold = ">4.5"
pyscaffoldext-markdown = "*"
pre_commit = "*"
twine = "*"
linkify-it-py = "*"
streamlit = ">=1.39.0,<2"
tox = ">=4.21.2,<5"
r-irkernel = ">=1.3.2,<2"
r-tidyverse = ">=2.0.0,<3"
bioconductor-biomart = ">=2.58.0,<3"
r-ggridges = ">=0.5.6,<0.6"
r-ggrepel = ">=0.9.6,<0.10"
